--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,11 @@
 {
   "name": "vue-express-video-chat_server",
   "version": "0.1.0",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.11"
+  }
 }
