--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "serve": "nodemon",
     "test:unit": "jest",
     "lint": "eslint --ext ts ."
   },
@@ -17,7 +18,9 @@
     "eslint": "^7.19.0",
     "eslint-plugin-jest": "^24.1.3",
     "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
     "ts-jest": "^26.5.0",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
 }
