--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,6 +13,20 @@ services:
     ports:
       - '8080:8080'
     command: [yarn, serve]
+  
+  server:
+    build:
+      context: ./server
+      dockerfile: Dockerfile.dev
+    ports:
+      - 3000:3000
+    volumes:
+      - ./server:/usr/src
+      - node_modules_server:/usr/src/node_modules
+    stdin_open: true
+    tty: true
+    command: [yarn, serve]
 
 volumes:
   node_modules_client:
+  node_modules_server:
