--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -18,6 +18,8 @@ services:
     build:
       context: ./server
       dockerfile: Dockerfile.dev
+    environment:
+      NODE_ENV: ${NODE_ENV}
     ports:
       - 3000:3000
     volumes:
