volume share client build result

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,11 +7,10 @@ services:
       dockerfile: Dockerfile.dev
     volumes:
       - ./client:/usr/src
+      - public:/usr/src/dist
       - node_modules_client:/usr/src/node_modules
     stdin_open: true
     tty: true
-    ports:
-      - '8080:8080'
     command: [yarn, serve]
   
   server:
@@ -24,6 +23,7 @@ services:
       - 3000:3000
     volumes:
       - ./server:/usr/src
+      - public:/usr/src/src/public
       - node_modules_server:/usr/src/node_modules
     stdin_open: true
     tty: true
@@ -32,3 +32,4 @@ services:
 volumes:
   node_modules_client:
   node_modules_server:
+  public:
