--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-jest": "^24.1.3",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
+    "path": "^0.12.7",
     "ts-jest": "^26.5.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
