--- a/server/package.json
+++ b/server/package.json
@@ -8,10 +8,20 @@
     "lint": "eslint --ext ts ."
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "connect-redis": "^5.0.0",
+    "cookie-parser": "^1.4.5",
+    "csurf": "^1.11.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.0",
+    "@types/connect-redis": "^0.0.16",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/csurf": "^1.11.0",
     "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.3",
     "@types/node": "^14.14.22",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
