--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -29,7 +29,15 @@ services:
     tty: true
     command: [yarn, serve]
 
+  redis:
+    image: redis:6.0-alpine
+    ports:
+      - 6399:6379
+    volumes:
+      - redis:/data
+
 volumes:
   node_modules_client:
   node_modules_server:
   public:
+  redis:
