--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "cookie-parser": "^1.4.5",
     "csurf": "^1.11.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.1"
+    "express-session": "^1.17.1",
+    "redis": "^3.0.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
@@ -23,6 +24,7 @@
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
     "@types/node": "^14.14.22",
+    "@types/redis": "^2.8.28",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "eslint": "^7.19.0",
