--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "csurf": "^1.11.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "fs-extra": "^9.1.0",
     "redis": "^3.0.2"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "@types/csurf": "^1.11.0",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
+    "@types/fs-extra": "^9.0.6",
     "@types/node": "^14.14.22",
     "@types/redis": "^2.8.28",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
