--- a/.env.dev
+++ b/.env.dev
@@ -6,3 +6,4 @@ DB_HOST=db
 DB_NAME=vue-express-video-chat
 DB_AUTH_NAME=admin
 DB_AUTH_PASSWORD=password
+EMAIL_FROM=vue-express-vieo-chat@example.com
