--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint --ext ts ."
   },
   "dependencies": {
+    "aws-sdk": "^2.839.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "connect-redis": "^5.0.0",
@@ -18,9 +19,11 @@
     "fs-extra": "^9.1.0",
     "mongoose": "^5.11.14",
     "mongoose-unique-validator": "^2.0.3",
+    "nodemailer": "^6.4.17",
     "redis": "^3.0.2"
   },
   "devDependencies": {
+    "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.19.0",
     "@types/connect-redis": "^0.0.16",
@@ -32,6 +35,7 @@
     "@types/mongoose": "^5.10.3",
     "@types/mongoose-unique-validator": "^1.0.4",
     "@types/node": "^14.14.22",
+    "@types/nodemailer": "^6.4.0",
     "@types/redis": "^2.8.28",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
