--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "connect-redis": "^5.0.0",
     "cookie-parser": "^1.4.5",
+    "crypto": "^1.0.1",
     "csurf": "^1.11.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
@@ -20,7 +21,8 @@
     "mongoose": "^5.11.14",
     "mongoose-unique-validator": "^2.0.3",
     "nodemailer": "^6.4.17",
-    "redis": "^3.0.2"
+    "redis": "^3.0.2",
+    "url-join": "^4.0.1"
   },
   "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
