--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,7 +8,8 @@
     "sourceMap": true,
     "baseUrl": ".",
     "importHelpers": true,
-    "types": ["node", "jest"]
+    "types": ["node", "jest"],
+    "typeRoots" : ["src/types"]
   },
   "include": [
     "src/**/*.ts",
