--- a/.env.dev
+++ b/.env.dev
@@ -8,3 +8,4 @@ DB_NAME=vue-express-video-chat
 DB_AUTH_NAME=admin
 DB_AUTH_PASSWORD=password
 EMAIL_FROM=vue-express-vieo-chat@example.com
+CRYPTO_PASSWORD=5799cdfa10b38bfab23118c9cbd3c8d4
