--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -28,6 +28,7 @@ services:
       REDIS_PREFIX: ${REDIS_PREFIX}
       SESSION_SECRET: ${SESSION_SECRET}
       CRYPTO_PASSWORD: ${CRYPTO_PASSWORD}
+      EMAIL_FROM: ${EMAIL_FROM}
     ports:
       - 3000:3000
     volumes:
