--- a/.github/workflows/on-push_server.yml
+++ b/.github/workflows/on-push_server.yml
@@ -34,7 +34,7 @@ jobs:
         REDIS_PREFIX: rp
         SESSION_SECRET: secret
         CRYPTO_PASSWORD: 5799cdfa10b38bfab23118c9cbd3c8d4
-        EMAIL_FROM: vue-express-vieo-chat@example.com
+        EMAIL_FROM: vue-express-video-chat@example.com
     steps:
       - name: checkout
         uses: actions/checkout@v2
