--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "agora-rtc-sdk": "^3.4.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "local-storage": "^2.0.0",
+    "material-icons": "^0.5.3",
     "register-service-worker": "^1.7.1",
     "url-join": "^4.0.1",
     "vue": "^3.0.0",
@@ -20,8 +23,10 @@
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
+    "@types/agora-rtc-sdk": "^3.1.0",
     "@types/axios": "^0.14.0",
     "@types/jest": "^24.0.19",
+    "@types/local-storage": "^1.4.0",
     "@types/url-join": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
