--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "local-storage": "^2.0.0",
     "material-icons": "^0.5.3",
     "register-service-worker": "^1.7.1",
+    "socket.io-client": "^3.1.1",
     "url-join": "^4.0.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
@@ -27,6 +28,7 @@
     "@types/axios": "^0.14.0",
     "@types/jest": "^24.0.19",
     "@types/local-storage": "^1.4.0",
+    "@types/socket.io-client": "^1.4.35",
     "@types/url-join": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
