add host to client container for socket

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: ./client
       dockerfile: Dockerfile.dev
+    environment:
+      VUE_APP_HOST: ${HOST}
     volumes:
       - ./client:/usr/src
       - public:/usr/src/dist
