--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "mongoose-unique-validator": "^2.0.3",
     "nodemailer": "^6.4.17",
     "redis": "^3.0.2",
+    "socket.io": "^3.1.1",
     "url-join": "^4.0.1"
   },
   "devDependencies": {
@@ -39,6 +40,7 @@
     "@types/node": "^14.14.22",
     "@types/nodemailer": "^6.4.0",
     "@types/redis": "^2.8.28",
+    "@types/socket.io": "^2.1.13",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "eslint": "^7.19.0",
