--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "fs-extra": "^9.1.0",
     "mongoose": "^5.11.14",
     "mongoose-unique-validator": "^2.0.3",
+    "node-cron": "^2.0.3",
     "nodemailer": "^6.4.17",
     "redis": "^3.0.2",
     "socket.io": "^3.1.1",
@@ -38,6 +39,7 @@
     "@types/mongoose": "^5.10.3",
     "@types/mongoose-unique-validator": "^1.0.4",
     "@types/node": "^14.14.22",
+    "@types/node-cron": "^2.0.3",
     "@types/nodemailer": "^6.4.0",
     "@types/redis": "^2.8.28",
     "@types/socket.io": "^2.1.13",
