--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service build --watch --no-clean --mode development",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --no-clean --mode production",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
