set helmet and nocache

--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,10 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "fs-extra": "^9.1.0",
+    "helmet": "^4.4.1",
     "mongoose": "^5.11.14",
     "mongoose-unique-validator": "^2.0.3",
+    "nocache": "^2.1.0",
     "node-cron": "^2.0.3",
     "nodemailer": "^6.4.17",
     "redis": "^3.0.2",
@@ -36,6 +38,7 @@
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
     "@types/fs-extra": "^9.0.6",
+    "@types/helmet": "^4.0.0",
     "@types/mongoose": "^5.10.3",
     "@types/mongoose-unique-validator": "^1.0.4",
     "@types/node": "^14.14.22",
