--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "register-service-worker": "^1.7.1",
     "socket.io-client": "^3.1.1",
     "url-join": "^4.0.1",
+    "validator": "^13.5.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -30,6 +31,7 @@
     "@types/local-storage": "^1.4.0",
     "@types/socket.io-client": "^1.4.35",
     "@types/url-join": "^4.0.0",
+    "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
